Fixed footer to not cover scrollbar

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,13 +1,11 @@
 /*Applies styles to both footers*/
 .ucpFooter, .MobileFooter {
-    border-bottom: 1px solid teal;  
-    margin-top: 3%;  
-    width: 100%;
+    border-bottom: 1px solid teal;
+    width: 99%;
     background-image: url('../../images/Footer.png');
     background-position: center;
     bottom: 0;
     position: fixed;
-    z-index: -1;
 }
 
 /*Applies styles to desktop footer*/
